Analizador Lexico/Analisis Sintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    DCORCHETE
    DIVISION_IGUAL
    ICORCHETE
    MAS_IGUAL
    MENOS_IGUAL
    MODULO_IGUAL
    PALABRA_RESERVADA
    POR_IGUAL
    PUNTO

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> lineas
Rule 3     lineas -> lineas line
Rule 4     lineas -> line
Rule 5     line -> expresion PUNTOYCOMA
Rule 6     line -> sentencia
Rule 7     sentencia -> declaracion
Rule 8     sentencia -> sentencia_if
Rule 9     sentencia -> sentencia_for
Rule 10    sentencia -> sentencia_while
Rule 11    sentencia -> sentencia_funcion_declaracion
Rule 12    sentencia -> return
Rule 13    sentencia_block -> ILLAVE statements DLLAVE
Rule 14    statements -> statements line
Rule 15    statements -> line
Rule 16    declaracion -> TIPO_DATO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 17    sentencia -> IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 18    sentencia_if -> IF IPARENTESIS expresion DPARENTESIS sentencia_block ELSE sentencia_if
Rule 19    sentencia_if -> IF IPARENTESIS expresion DPARENTESIS sentencia_block
Rule 20    sentencia_if -> IF IPARENTESIS expresion DPARENTESIS sentencia_block ELSE sentencia_block
Rule 21    sentencia_for -> FOR IPARENTESIS TIPO_DATO IDENTIFICADOR DOSPUNTOS IDENTIFICADOR DPARENTESIS sentencia_block
Rule 22    sentencia_while -> WHILE IPARENTESIS expresion DPARENTESIS sentencia_block
Rule 23    modificador_acceso -> MODIFICADOR_ACCESO
Rule 24    modificador_acceso -> empty
Rule 25    static -> STATIC
Rule 26    static -> empty
Rule 27    tipo_dato -> TIPO_DATO
Rule 28    tipo_dato -> VOID
Rule 29    parametros -> parametros COMA TIPO_DATO IDENTIFICADOR
Rule 30    parametros -> TIPO_DATO IDENTIFICADOR
Rule 31    parametros -> empty
Rule 32    return -> RETURN expresion PUNTOYCOMA
Rule 33    sentencia_funcion_declaracion -> modificador_acceso static tipo_dato IDENTIFICADOR IPARENTESIS parametros DPARENTESIS sentencia_block
Rule 34    expresion -> FUNCION_PRINTLN IPARENTESIS expresion DPARENTESIS
Rule 35    expresion -> expresion MAS expresion
Rule 36    expresion -> expresion MENOS expresion
Rule 37    expresion -> expresion POR expresion
Rule 38    expresion -> expresion DIVISION expresion
Rule 39    expresion -> expresion MODULO expresion
Rule 40    expresion -> expresion AND expresion
Rule 41    expresion -> expresion OR expresion
Rule 42    expresion -> expresion MAYOR expresion
Rule 43    expresion -> expresion MENOR expresion
Rule 44    expresion -> expresion MAYOR_IGUAL expresion
Rule 45    expresion -> expresion MENOR_IGUAL expresion
Rule 46    expresion -> expresion IGUALDAD expresion
Rule 47    expresion -> expresion DIFERENTE expresion
Rule 48    expresion -> MENOS expresion
Rule 49    expresion -> IDENTIFICADOR INCREMENTO
Rule 50    expresion -> INCREMENTO IDENTIFICADOR
Rule 51    expresion -> IDENTIFICADOR DECREMENTO
Rule 52    expresion -> DECREMENTO IDENTIFICADOR
Rule 53    expresion -> IDENTIFICADOR
Rule 54    expresion -> IPARENTESIS expresion DPARENTESIS
Rule 55    expresion -> NUMERO
Rule 56    expresion -> DECIMAL
Rule 57    expresion -> CADENA
Rule 58    expresion -> BOOLEANO

Terminals, with rules where they appear

AND                  : 40
BOOLEANO             : 58
CADENA               : 57
COMA                 : 29
COMENTARIO           : 
DCORCHETE            : 
DECIMAL              : 56
DECREMENTO           : 51 52
DIFERENTE            : 47
DIVISION             : 38
DIVISION_IGUAL       : 
DLLAVE               : 13
DOSPUNTOS            : 21
DPARENTESIS          : 18 19 20 21 22 33 34 54
ELSE                 : 18 20
FOR                  : 21
FUNCION_PRINTLN      : 34
ICORCHETE            : 
IDENTIFICADOR        : 16 17 21 21 29 30 33 49 50 51 52 53
IF                   : 18 19 20
IGUAL                : 16 17
IGUALDAD             : 46
ILLAVE               : 13
INCREMENTO           : 49 50
IPARENTESIS          : 18 19 20 21 22 33 34 54
MAS                  : 35
MAS_IGUAL            : 
MAYOR                : 42
MAYOR_IGUAL          : 44
MENOR                : 43
MENOR_IGUAL          : 45
MENOS                : 36 48
MENOS_IGUAL          : 
MODIFICADOR_ACCESO   : 23
MODULO               : 39
MODULO_IGUAL         : 
NUMERO               : 55
OR                   : 41
PALABRA_RESERVADA    : 
POR                  : 37
POR_IGUAL            : 
PUNTO                : 
PUNTOYCOMA           : 5 16 17 32
RETURN               : 32
STATIC               : 25
TIPO_DATO            : 16 21 27 29 30
VOID                 : 28
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

declaracion          : 7
empty                : 24 26 31
expresion            : 5 16 17 18 19 20 22 32 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 54
line                 : 3 4 14 15
lineas               : 2 3
modificador_acceso   : 33
parametros           : 29 33
program              : 0
return               : 12
sentencia            : 6
sentencia_block      : 18 19 20 20 21 22 33
sentencia_for        : 9
sentencia_funcion_declaracion : 11
sentencia_if         : 8 18
sentencia_while      : 10
statements           : 13 14
static               : 33
tipo_dato            : 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . lineas
    (3) lineas -> . lineas line
    (4) lineas -> . line
    (5) line -> . expresion PUNTOYCOMA
    (6) line -> . sentencia
    (34) expresion -> . FUNCION_PRINTLN IPARENTESIS expresion DPARENTESIS
    (35) expresion -> . expresion MAS expresion
    (36) expresion -> . expresion MENOS expresion
    (37) expresion -> . expresion POR expresion
    (38) expresion -> . expresion DIVISION expresion
    (39) expresion -> . expresion MODULO expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . expresion MAYOR expresion
    (43) expresion -> . expresion MENOR expresion
    (44) expresion -> . expresion MAYOR_IGUAL expresion
    (45) expresion -> . expresion MENOR_IGUAL expresion
    (46) expresion -> . expresion IGUALDAD expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . MENOS expresion
    (49) expresion -> . IDENTIFICADOR INCREMENTO
    (50) expresion -> . INCREMENTO IDENTIFICADOR
    (51) expresion -> . IDENTIFICADOR DECREMENTO
    (52) expresion -> . DECREMENTO IDENTIFICADOR
    (53) expresion -> . IDENTIFICADOR
    (54) expresion -> . IPARENTESIS expresion DPARENTESIS
    (55) expresion -> . NUMERO
    (56) expresion -> . DECIMAL
    (57) expresion -> . CADENA
    (58) expresion -> . BOOLEANO
    (7) sentencia -> . declaracion
    (8) sentencia -> . sentencia_if
    (9) sentencia -> . sentencia_for
    (10) sentencia -> . sentencia_while
    (11) sentencia -> . sentencia_funcion_declaracion
    (12) sentencia -> . return
    (17) sentencia -> . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (16) declaracion -> . TIPO_DATO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (18) sentencia_if -> . IF IPARENTESIS expresion DPARENTESIS sentencia_block ELSE sentencia_if
    (19) sentencia_if -> . IF IPARENTESIS expresion DPARENTESIS sentencia_block
    (20) sentencia_if -> . IF IPARENTESIS expresion DPARENTESIS sentencia_block ELSE sentencia_block
    (21) sentencia_for -> . FOR IPARENTESIS TIPO_DATO IDENTIFICADOR DOSPUNTOS IDENTIFICADOR DPARENTESIS sentencia_block
    (22) sentencia_while -> . WHILE IPARENTESIS expresion DPARENTESIS sentencia_block
    (33) sentencia_funcion_declaracion -> . modificador_acceso static tipo_dato IDENTIFICADOR IPARENTESIS parametros DPARENTESIS sentencia_block
    (32) return -> . RETURN expresion PUNTOYCOMA
    (23) modificador_acceso -> . MODIFICADOR_ACCESO
    (24) modificador_acceso -> . empty
    (1) empty -> .

  ! shift/reduce conflict for TIPO_DATO resolved as shift
    FUNCION_PRINTLN shift and go to state 6
    MENOS           shift and go to state 8
    IDENTIFICADOR   shift and go to state 9
    INCREMENTO      shift and go to state 10
    DECREMENTO      shift and go to state 11
    IPARENTESIS     shift and go to state 7
    NUMERO          shift and go to state 12
    DECIMAL         shift and go to state 13
    CADENA          shift and go to state 14
    BOOLEANO        shift and go to state 15
    TIPO_DATO       shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    WHILE           shift and go to state 25
    RETURN          shift and go to state 27
    MODIFICADOR_ACCESO shift and go to state 28
    STATIC          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)

  ! TIPO_DATO       [ reduce using rule 1 (empty -> .) ]

    program                        shift and go to state 1
    lineas                         shift and go to state 2
    line                           shift and go to state 3
    expresion                      shift and go to state 4
    sentencia                      shift and go to state 5
    declaracion                    shift and go to state 16
    sentencia_if                   shift and go to state 17
    sentencia_for                  shift and go to state 18
    sentencia_while                shift and go to state 19
    sentencia_funcion_declaracion  shift and go to state 20
    return                         shift and go to state 21
    modificador_acceso             shift and go to state 26
    empty                          shift and go to state 29

state 1

    (0) S' -> program .



state 2

    (2) program -> lineas .
    (3) lineas -> lineas . line
    (5) line -> . expresion PUNTOYCOMA
    (6) line -> . sentencia
    (34) expresion -> . FUNCION_PRINTLN IPARENTESIS expresion DPARENTESIS
    (35) expresion -> . expresion MAS expresion
    (36) expresion -> . expresion MENOS expresion
    (37) expresion -> . expresion POR expresion
    (38) expresion -> . expresion DIVISION expresion
    (39) expresion -> . expresion MODULO expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . expresion MAYOR expresion
    (43) expresion -> . expresion MENOR expresion
    (44) expresion -> . expresion MAYOR_IGUAL expresion
    (45) expresion -> . expresion MENOR_IGUAL expresion
    (46) expresion -> . expresion IGUALDAD expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . MENOS expresion
    (49) expresion -> . IDENTIFICADOR INCREMENTO
    (50) expresion -> . INCREMENTO IDENTIFICADOR
    (51) expresion -> . IDENTIFICADOR DECREMENTO
    (52) expresion -> . DECREMENTO IDENTIFICADOR
    (53) expresion -> . IDENTIFICADOR
    (54) expresion -> . IPARENTESIS expresion DPARENTESIS
    (55) expresion -> . NUMERO
    (56) expresion -> . DECIMAL
    (57) expresion -> . CADENA
    (58) expresion -> . BOOLEANO
    (7) sentencia -> . declaracion
    (8) sentencia -> . sentencia_if
    (9) sentencia -> . sentencia_for
    (10) sentencia -> . sentencia_while
    (11) sentencia -> . sentencia_funcion_declaracion
    (12) sentencia -> . return
    (17) sentencia -> . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (16) declaracion -> . TIPO_DATO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (18) sentencia_if -> . IF IPARENTESIS expresion DPARENTESIS sentencia_block ELSE sentencia_if
    (19) sentencia_if -> . IF IPARENTESIS expresion DPARENTESIS sentencia_block
    (20) sentencia_if -> . IF IPARENTESIS expresion DPARENTESIS sentencia_block ELSE sentencia_block
    (21) sentencia_for -> . FOR IPARENTESIS TIPO_DATO IDENTIFICADOR DOSPUNTOS IDENTIFICADOR DPARENTESIS sentencia_block
    (22) sentencia_while -> . WHILE IPARENTESIS expresion DPARENTESIS sentencia_block
    (33) sentencia_funcion_declaracion -> . modificador_acceso static tipo_dato IDENTIFICADOR IPARENTESIS parametros DPARENTESIS sentencia_block
    (32) return -> . RETURN expresion PUNTOYCOMA
    (23) modificador_acceso -> . MODIFICADOR_ACCESO
    (24) modificador_acceso -> . empty
    (1) empty -> .

  ! shift/reduce conflict for TIPO_DATO resolved as shift
    $end            reduce using rule 2 (program -> lineas .)
    FUNCION_PRINTLN shift and go to state 6
    MENOS           shift and go to state 8
    IDENTIFICADOR   shift and go to state 9
    INCREMENTO      shift and go to state 10
    DECREMENTO      shift and go to state 11
    IPARENTESIS     shift and go to state 7
    NUMERO          shift and go to state 12
    DECIMAL         shift and go to state 13
    CADENA          shift and go to state 14
    BOOLEANO        shift and go to state 15
    TIPO_DATO       shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    WHILE           shift and go to state 25
    RETURN          shift and go to state 27
    MODIFICADOR_ACCESO shift and go to state 28
    STATIC          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)

  ! TIPO_DATO       [ reduce using rule 1 (empty -> .) ]

    line                           shift and go to state 30
    expresion                      shift and go to state 4
    sentencia                      shift and go to state 5
    declaracion                    shift and go to state 16
    sentencia_if                   shift and go to state 17
    sentencia_for                  shift and go to state 18
    sentencia_while                shift and go to state 19
    sentencia_funcion_declaracion  shift and go to state 20
    return                         shift and go to state 21
    modificador_acceso             shift and go to state 26
    empty                          shift and go to state 29

state 3

    (4) lineas -> line .

    FUNCION_PRINTLN reduce using rule 4 (lineas -> line .)
    MENOS           reduce using rule 4 (lineas -> line .)
    IDENTIFICADOR   reduce using rule 4 (lineas -> line .)
    INCREMENTO      reduce using rule 4 (lineas -> line .)
    DECREMENTO      reduce using rule 4 (lineas -> line .)
    IPARENTESIS     reduce using rule 4 (lineas -> line .)
    NUMERO          reduce using rule 4 (lineas -> line .)
    DECIMAL         reduce using rule 4 (lineas -> line .)
    CADENA          reduce using rule 4 (lineas -> line .)
    BOOLEANO        reduce using rule 4 (lineas -> line .)
    TIPO_DATO       reduce using rule 4 (lineas -> line .)
    IF              reduce using rule 4 (lineas -> line .)
    FOR             reduce using rule 4 (lineas -> line .)
    WHILE           reduce using rule 4 (lineas -> line .)
    RETURN          reduce using rule 4 (lineas -> line .)
    MODIFICADOR_ACCESO reduce using rule 4 (lineas -> line .)
    STATIC          reduce using rule 4 (lineas -> line .)
    VOID            reduce using rule 4 (lineas -> line .)
    $end            reduce using rule 4 (lineas -> line .)


state 4

    (5) line -> expresion . PUNTOYCOMA
    (35) expresion -> expresion . MAS expresion
    (36) expresion -> expresion . MENOS expresion
    (37) expresion -> expresion . POR expresion
    (38) expresion -> expresion . DIVISION expresion
    (39) expresion -> expresion . MODULO expresion
    (40) expresion -> expresion . AND expresion
    (41) expresion -> expresion . OR expresion
    (42) expresion -> expresion . MAYOR expresion
    (43) expresion -> expresion . MENOR expresion
    (44) expresion -> expresion . MAYOR_IGUAL expresion
    (45) expresion -> expresion . MENOR_IGUAL expresion
    (46) expresion -> expresion . IGUALDAD expresion
    (47) expresion -> expresion . DIFERENTE expresion

    PUNTOYCOMA      shift and go to state 31
    MAS             shift and go to state 32
    MENOS           shift and go to state 33
    POR             shift and go to state 34
    DIVISION        shift and go to state 35
    MODULO          shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    MAYOR           shift and go to state 39
    MENOR           shift and go to state 40
    MAYOR_IGUAL     shift and go to state 41
    MENOR_IGUAL     shift and go to state 42
    IGUALDAD        shift and go to state 43
    DIFERENTE       shift and go to state 44


state 5

    (6) line -> sentencia .

    FUNCION_PRINTLN reduce using rule 6 (line -> sentencia .)
    MENOS           reduce using rule 6 (line -> sentencia .)
    IDENTIFICADOR   reduce using rule 6 (line -> sentencia .)
    INCREMENTO      reduce using rule 6 (line -> sentencia .)
    DECREMENTO      reduce using rule 6 (line -> sentencia .)
    IPARENTESIS     reduce using rule 6 (line -> sentencia .)
    NUMERO          reduce using rule 6 (line -> sentencia .)
    DECIMAL         reduce using rule 6 (line -> sentencia .)
    CADENA          reduce using rule 6 (line -> sentencia .)
    BOOLEANO        reduce using rule 6 (line -> sentencia .)
    TIPO_DATO       reduce using rule 6 (line -> sentencia .)
    IF              reduce using rule 6 (line -> sentencia .)
    FOR             reduce using rule 6 (line -> sentencia .)
    WHILE           reduce using rule 6 (line -> sentencia .)
    RETURN          reduce using rule 6 (line -> sentencia .)
    MODIFICADOR_ACCESO reduce using rule 6 (line -> sentencia .)
    STATIC          reduce using rule 6 (line -> sentencia .)
    VOID            reduce using rule 6 (line -> sentencia .)
    $end            reduce using rule 6 (line -> sentencia .)
    DLLAVE          reduce using rule 6 (line -> sentencia .)


state 6

    (34) expresion -> FUNCION_PRINTLN . IPARENTESIS expresion DPARENTESIS

    IPARENTESIS     shift and go to state 45


state 7

    (54) expresion -> IPARENTESIS . expresion DPARENTESIS
    (34) expresion -> . FUNCION_PRINTLN IPARENTESIS expresion DPARENTESIS
    (35) expresion -> . expresion MAS expresion
    (36) expresion -> . expresion MENOS expresion
    (37) expresion -> . expresion POR expresion
    (38) expresion -> . expresion DIVISION expresion
    (39) expresion -> . expresion MODULO expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . expresion MAYOR expresion
    (43) expresion -> . expresion MENOR expresion
    (44) expresion -> . expresion MAYOR_IGUAL expresion
    (45) expresion -> . expresion MENOR_IGUAL expresion
    (46) expresion -> . expresion IGUALDAD expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . MENOS expresion
    (49) expresion -> . IDENTIFICADOR INCREMENTO
    (50) expresion -> . INCREMENTO IDENTIFICADOR
    (51) expresion -> . IDENTIFICADOR DECREMENTO
    (52) expresion -> . DECREMENTO IDENTIFICADOR
    (53) expresion -> . IDENTIFICADOR
    (54) expresion -> . IPARENTESIS expresion DPARENTESIS
    (55) expresion -> . NUMERO
    (56) expresion -> . DECIMAL
    (57) expresion -> . CADENA
    (58) expresion -> . BOOLEANO
